# opensdn-setups

./: .gitignore  .source  Makefile  README.md  console.py  controller-routes.py  delete-by-prefix.py  delete-by-uuid.py  pyproject.toml  run.py
configs/: example.ini
setups/: _utils.py  xx_int_rt_mpls.py  xx_int_rt_vxlan.py  xx_net_rt_mpls.py  xx_net_rt_vxlan.py
src/: patch_requests.py
src/openstack/: dto.py  nova_api.py  provisioner.py  repo.py  serial_console_client.py
src/sdn/: api_utils.py  constants.py  provisioner.py  repo.py  resources.py  vnc_api_gen.py
src/sdn/introspect/: agent.py
src/sdn/introspect/controller/: adapter.py  contracts.py
