[project]
name = "cxsdn-setups"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.13.3",
    "pydantic-xml>=2.20.0",
    "requests>=2.32.5",
    "rich>=15.0.0",
    "ws4py>=0.6.0",
]

[dependency-groups]
dev = [
    "setuptools>=82.0.1",
    "lxml>=6.0.2",
    "pyyaml>=6.0.3",
    "ruff>=0.15.8",
    "isort>=8.0.1",
]
